# FillerWordsDetector

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
bot/: __init__.py  chat_state.py  database.py  filler_detector.py  messages.py  telegram_filler_bot.py
tests/: __init__.py  test_chat_state.py  test_database.py  test_filler_detector.py  test_messages.py
